# LoginPage

./: .gitignore  Auth.cpp  Auth.h  CMakeLists.txt  LoginPage.cpp  LoginPage.sln  LoginPage.vcxproj  LoginPage.vcxproj.filters  Utils.cpp  data.txt  vcpkg.json
LoginPage/x64/Debug/: LoginPage.exe.recipe  LoginPage.ilk  LoginPage.vcxproj.FileListAbsolute.txt  loginpage.obj.enc  vc143.idb
LoginPage/x64/Debug/LoginPage.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LoginPage.lastbuildstate  LoginPage.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
includes/: Utils.h
src/: Auth.cpp  LoginPage.cpp  Utils.cpp
tests/: tests_login.cpp  tests_main.cpp
x64/Debug/: LoginTests.exe.gta.testdurations
